# telstra-CFH2025-firstwave

./: .gitignore  README.md  Rubrics.md  business_strategy.md  presentation.md
backend-api/: README.md  pyproject.toml
backend-api/app/: config.py  main.py
backend-api/app/routers/: chat.py  events.py
backend-api/app/services/: ai_agent.py  llm_service.py  mcp_client.py  mcp_server.py
frontend-dashboard/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend-dashboard/src/: App.tsx  index.css
frontend-dashboard/src/components/: AIAssistantChatbot.tsx  ActiveSubscriptionsPanel.tsx  EdgeAnalysisResults.tsx  EventNotification.tsx  Header.tsx  MapView.tsx  NetworkMetricsPanel.tsx  NotificationContainer.tsx  StatusPanel.tsx  TelemetryPanel.tsx  VideoStreamViewer.tsx
frontend-dashboard/src/services/: backendAPI.ts  eventStreamService.ts
frontend-dashboard/src/store/: chatStore.ts  mapStore.ts  regionDeviceStore.ts  subscriptionsStore.ts  systemStatusStore.ts
frontend-dashboard/src/types/: index.ts
frontend-dashboard/src/utils/: slashCommands.ts  staticData.ts
