[project]
name = "backend-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.16",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "mcp>=1.18.0",
    "sse-starlette>=3.0.2",
    "uvicorn[standard]>=0.38.0",
]
